chore(deps): update opentalk to 0.30.1
* updates the opentalk-types-api-v1,
  opentalk-types-common & opentalk-types-signaling crates to version
  0.30
* removes the opentalk-types dependency
* updates axum to 0.8.1 and axum-prometheus to 0.8.0 (required due to
  updates in the types crates)
* updates utoipa to 5.3.1 and utoipa-swagger-ui to 9.0.0 (required due
  to updates in the types crates)
